"evaluate and label api quality" (#148)
* 🚧 Adding code quality annotations

* 🚧 merging

* 🚧 merging

* 🚧 merging

* 🚧 work in progress

* 🚧 work in progress

* 🚧 work in progress
 - checked and updated kivakit-interfaces
 - added ApiChange annotation

* 🚧 work in progress
 - checked and updated kivakit-interfaces
 - added ApiChange annotation

* 🚧 work in progress

* 🚧 work in progress

* 🚧 work in progress

* 🚧 more work on collections

* 🚧 more work on collections

* 🚧 completed analysis of lists and sets

* 🚧 completed analysis of all collections

* 🚧 completed analysis of ensure package

* 🚧 completed analysis of function package

* 🚧 completed analysis io package

* 🚧 completed analysis modules package

* 🚧 completed analysis of object formatter and primitive utilities classes

* 🚧 completed analysis of language utility methods

* 🚧 work in progress on reflection classes

* 🚧 work in progress on reflection classes

* 🚧 finished evaluation of languages and reflection packages

* 🚧 finished evaluation of locale/iso code package

* 🚧 finished evaluation of logging filters

* 🚧 finished evaluation of logger package

* 🚧 finished evaluation of locale package

* 🚧 finished evaluation of logging package

* 🚧 work in progess evaluating messaging package

* 🚧 completed evaluation of messaging package

* 🚧 completed evaluation of messaging package

* 🚧 completed analysis of os and progress reporter packages

* 🚧 completed analysis of project package

* 🚧 completed analysis of registry package

* 🚧 completed analysis of strings package

* 🚧 completed analysis of version and vm packages

* 🚧 completed analysis of threading packages

* 🚧 completed analysis of level package

* 🚧 completed analysis of identifier package

* 🚧 work in progress on analysis of time package

* 🚧 completed analysis of all scalar values

* 🚧 completed analysis of kivakit-core

* 🚧 completed analysis of kivaki